@@ -9,5 +9,6 @@
   "magnify.sullys_mod_tab": "Sully's Mod",
   "magnify.boatload_tab": "Boatload",
   "magnify.buzzier_bees_tab": "Buzzier Bees",
-  "magnify.snow_pig_tab": "Snow Pig"
+  "magnify.snow_pig_tab": "Snow Pig",
+  "magnify.pigsteel_tab": "Pigsteel"
 }
